Added GitHub Actions for Robot tests and implemented set value feature

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -13,5 +13,9 @@
   <form action="/reset" method="POST">
     <input type="submit" value="Nollaa">
   </form>
+  <form action="/set_value" method="POST">
+    <input type="text" name="value" placeholder="Anna uusi arvo">
+    <input type="submit" value="Aseta arvo">
+  </form>   
 </body>
 </html>
